GL/Projet_GL/src/test/deca/context/invalid/sansObjet/decl/id_nn_decl.deca
// Test : undeclared_identifier
// But : détecter l’utilisation d’une variable non déclarée.
// Couvre : résolution des identifiants.
// Résultat attendu : erreur contextuelle.
// Erreur affichée: Identifier a is not defined in the current scope nor in its parent scopes

{
    a = 3;
}
